[package]
name = "rust-tracing-guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.18"
